--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -29,16 +29,21 @@ jobs:
       remove_like: ${{ steps.filter.outputs.remove_like }}
     steps:
       - uses: actions/checkout@v4
-      - id: filter
-        run: |
-          echo "add_like=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^add-like/' || echo '')" >> $GITHUB_OUTPUT
-          echo "get_likes=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^get-likes/' || echo '')" >> $GITHUB_OUTPUT
-          echo "remove_like=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^remove-like/' || echo '')" >> $GITHUB_OUTPUT
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            add_like:
+              - 'add-like/**'
+            get_likes:
+              - 'get-likes/**'
+            remove_like:
+              - 'remove-like/**'
 
   add_like:
     needs: changes
     runs-on: ubuntu-latest
-    if: needs.changes.outputs.add_like != ''
+    if: needs.changes.outputs.add_like == 'true'
     steps:
       - uses: actions/checkout@v4
       - name: Generate .env for tests
@@ -106,7 +111,7 @@ jobs:
   get_likes:
     needs: changes
     runs-on: ubuntu-latest
-    if: needs.changes.outputs.get_likes != ''
+    if: needs.changes.outputs.get_likes == 'true'
     steps:
       - uses: actions/checkout@v4
       - name: Generate .env for tests
@@ -174,7 +179,7 @@ jobs:
   remove_like:
     needs: changes
     runs-on: ubuntu-latest
-    if: needs.changes.outputs.remove_like != ''
+    if: needs.changes.outputs.remove_like == 'true'
     steps:
       - uses: actions/checkout@v4
       - name: Generate .env for tests
