--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Reactions Microservices
+name: CI/CD Reactions Microservices (split jobs)
 
 on:
   push:
@@ -21,7 +21,6 @@ env:
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  # Cambios detectados con dorny/paths-filter
   changes:
     runs-on: ubuntu-latest
     outputs:
@@ -41,24 +40,55 @@ jobs:
             remove_like:
               - 'remove-like/**'
 
-  # ADD-LIKE
-  add_like:
+  # --------- ADD-LIKE JOBS ---------
+  test_add_like:
     needs: changes
     runs-on: ubuntu-latest
     if: needs.changes.outputs.add_like == 'true'
     steps:
       - uses: actions/checkout@v4
+      - name: Generate .env for add-like
+        working-directory: ./add-like
+        run: |
+          cat <<EOF > .env
+          DB_HOST=${{ secrets.DB_HOST }}
+          DB_USER=${{ secrets.DB_USER }}
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          DB_PORT=${{ secrets.DB_PORT }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+          POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+          REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+          WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+          REDIS_HOST=${{ secrets.REDIS_HOST }}
+          REDIS_PORT=${{ secrets.REDIS_PORT }}
+          EOF
+      - name: Install dependencies & run tests
+        working-directory: ./add-like
+        run: |
+          pip install -r requirements.txt
+          pytest
 
+  build_and_push_add_like:
+    needs: test_add_like
+    runs-on: ubuntu-latest
+    if: needs.changes.outputs.add_like == 'true'
+    steps:
+      - uses: actions/checkout@v4
       - name: Build add-like image
         working-directory: ./add-like
         run: docker build -t ${{ env.DOCKERHUB_USERNAME }}/add-like:latest .
-
       - name: Login to DockerHub
         run: echo "${{ env.DOCKERHUB_TOKEN }}" | docker login -u "${{ env.DOCKERHUB_USERNAME }}" --password-stdin
-
       - name: Push add-like image
         run: docker push ${{ env.DOCKERHUB_USERNAME }}/add-like:latest
 
+  deploy_add_like:
+    needs: build_and_push_add_like
+    runs-on: ubuntu-latest
+    if: needs.changes.outputs.add_like == 'true'
+    steps:
+      - uses: actions/checkout@v4
       - name: Deploy add-like to EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -88,24 +118,55 @@ jobs:
               -p 6001:6001 \
               ${{ secrets.DOCKERHUB_USERNAME }}/add-like:latest
 
-  # GET-LIKES
-  get_likes:
+  # --------- GET-LIKES JOBS ---------
+  test_get_likes:
     needs: changes
     runs-on: ubuntu-latest
     if: needs.changes.outputs.get_likes == 'true'
     steps:
       - uses: actions/checkout@v4
+      - name: Generate .env for get-likes
+        working-directory: ./get-likes
+        run: |
+          cat <<EOF > .env
+          DB_HOST=${{ secrets.DB_HOST }}
+          DB_USER=${{ secrets.DB_USER }}
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          DB_PORT=${{ secrets.DB_PORT }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+          POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+          REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+          WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+          REDIS_HOST=${{ secrets.REDIS_HOST }}
+          REDIS_PORT=${{ secrets.REDIS_PORT }}
+          EOF
+      - name: Install dependencies & run tests
+        working-directory: ./get-likes
+        run: |
+          pip install -r requirements.txt
+          pytest
 
+  build_and_push_get_likes:
+    needs: test_get_likes
+    runs-on: ubuntu-latest
+    if: needs.changes.outputs.get_likes == 'true'
+    steps:
+      - uses: actions/checkout@v4
       - name: Build get-likes image
         working-directory: ./get-likes
         run: docker build -t ${{ env.DOCKERHUB_USERNAME }}/get-likes:latest .
-
       - name: Login to DockerHub
         run: echo "${{ env.DOCKERHUB_TOKEN }}" | docker login -u "${{ env.DOCKERHUB_USERNAME }}" --password-stdin
-
       - name: Push get-likes image
         run: docker push ${{ env.DOCKERHUB_USERNAME }}/get-likes:latest
 
+  deploy_get_likes:
+    needs: build_and_push_get_likes
+    runs-on: ubuntu-latest
+    if: needs.changes.outputs.get_likes == 'true'
+    steps:
+      - uses: actions/checkout@v4
       - name: Deploy get-likes to EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -135,24 +196,55 @@ jobs:
               -p 6003:6003 \
               ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:latest
 
-  # REMOVE-LIKE
-  remove_like:
+  # --------- REMOVE-LIKE JOBS ---------
+  test_remove_like:
     needs: changes
     runs-on: ubuntu-latest
     if: needs.changes.outputs.remove_like == 'true'
     steps:
       - uses: actions/checkout@v4
+      - name: Generate .env for remove-like
+        working-directory: ./remove-like
+        run: |
+          cat <<EOF > .env
+          DB_HOST=${{ secrets.DB_HOST }}
+          DB_USER=${{ secrets.DB_USER }}
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          DB_PORT=${{ secrets.DB_PORT }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+          POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+          REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+          WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+          REDIS_HOST=${{ secrets.REDIS_HOST }}
+          REDIS_PORT=${{ secrets.REDIS_PORT }}
+          EOF
+      - name: Install dependencies & run tests
+        working-directory: ./remove-like
+        run: |
+          pip install -r requirements.txt
+          pytest
 
+  build_and_push_remove_like:
+    needs: test_remove_like
+    runs-on: ubuntu-latest
+    if: needs.changes.outputs.remove_like == 'true'
+    steps:
+      - uses: actions/checkout@v4
       - name: Build remove-like image
         working-directory: ./remove-like
         run: docker build -t ${{ env.DOCKERHUB_USERNAME }}/remove-like:latest .
-
       - name: Login to DockerHub
         run: echo "${{ env.DOCKERHUB_TOKEN }}" | docker login -u "${{ env.DOCKERHUB_USERNAME }}" --password-stdin
-
       - name: Push remove-like image
         run: docker push ${{ env.DOCKERHUB_USERNAME }}/remove-like:latest
 
+  deploy_remove_like:
+    needs: build_and_push_remove_like
+    runs-on: ubuntu-latest
+    if: needs.changes.outputs.remove_like == 'true'
+    steps:
+      - uses: actions/checkout@v4
       - name: Deploy remove-like to EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
