--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -89,12 +89,22 @@ jobs:
     if: needs.changes.outputs.add_like == 'true'
     steps:
       - uses: actions/checkout@v4
+      - name: Set environment for deploy (add-like)
+        id: set_env
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
+            echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+          else
+            echo "SSH_KEY=${{ secrets.EC2_SSH_KEY }}" >> $GITHUB_ENV
+            echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}" >> $GITHUB_ENV
+          fi
       - name: Deploy add-like to EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}
+          host: ${{ env.EC2_HOST }}
           username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ${{ env.SSH_KEY }}
           script: |
             cat <<EOF > /home/ubuntu/add-like.env
             DB_HOST=${{ secrets.DB_HOST }}
@@ -167,12 +177,22 @@ jobs:
     if: needs.changes.outputs.get_likes == 'true'
     steps:
       - uses: actions/checkout@v4
+      - name: Set environment for deploy (get-likes)
+        id: set_env
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
+            echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+          else
+            echo "SSH_KEY=${{ secrets.EC2_SSH_KEY }}" >> $GITHUB_ENV
+            echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}" >> $GITHUB_ENV
+          fi
       - name: Deploy get-likes to EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}
+          host: ${{ env.EC2_HOST }}
           username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ${{ env.SSH_KEY }}
           script: |
             cat <<EOF > /home/ubuntu/get-likes.env
             DB_HOST=${{ secrets.DB_HOST }}
@@ -245,12 +265,22 @@ jobs:
     if: needs.changes.outputs.remove_like == 'true'
     steps:
       - uses: actions/checkout@v4
+      - name: Set environment for deploy (remove-like)
+        id: set_env
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
+            echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+          else
+            echo "SSH_KEY=${{ secrets.EC2_SSH_KEY }}" >> $GITHUB_ENV
+            echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}" >> $GITHUB_ENV
+          fi
       - name: Deploy remove-like to EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}
+          host: ${{ env.EC2_HOST }}
           username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ${{ env.SSH_KEY }}
           script: |
             cat <<EOF > /home/ubuntu/remove-like.env
             DB_HOST=${{ secrets.DB_HOST }}
