--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -89,23 +89,59 @@ jobs:
     if: needs.changes.outputs.add_like == 'true'
     steps:
       - uses: actions/checkout@v4
+
       - name: Set environment for deploy (add-like)
         id: set_env
         run: |
           if [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "main" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=prod" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=prod" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/test" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=test" >> $GITHUB_ENV
           else
             echo "No deploy target"
             exit 1
           fi
-      - name: Deploy add-like to EC2
+
+      - name: Deploy add-like to EC2 (test)
+        if: env.DEPLOY_ENV == 'test'
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ env.EC2_HOST }}
+          username: ubuntu
+          key: ${{ env.SSH_KEY }}
+          script: |
+            cat <<EOF > /home/ubuntu/add-like.env
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+            POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+            REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+            WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            EOF
+
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/add-like:latest
+            docker stop add-like || true && docker rm add-like || true
+            docker run -d --name add-like \
+              --env-file /home/ubuntu/add-like.env \
+              -p 6001:6001 \
+              ${{ secrets.DOCKERHUB_USERNAME }}/add-like:latest
+
+      - name: Deploy add-like to EC2 (prod)
+        if: env.DEPLOY_ENV == 'prod'
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ env.EC2_HOST }}
@@ -183,23 +219,59 @@ jobs:
     if: needs.changes.outputs.get_likes == 'true'
     steps:
       - uses: actions/checkout@v4
+
       - name: Set environment for deploy (get-likes)
         id: set_env
         run: |
           if [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "main" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=prod" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=prod" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/test" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=test" >> $GITHUB_ENV
           else
             echo "No deploy target"
             exit 1
           fi
-      - name: Deploy get-likes to EC2
+
+      - name: Deploy get-likes to EC2 (test)
+        if: env.DEPLOY_ENV == 'test'
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ env.EC2_HOST }}
+          username: ubuntu
+          key: ${{ env.SSH_KEY }}
+          script: |
+            cat <<EOF > /home/ubuntu/get-likes.env
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+            POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+            REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+            WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            EOF
+
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:latest
+            docker stop get-likes || true && docker rm get-likes || true
+            docker run -d --name get-likes \
+              --env-file /home/ubuntu/get-likes.env \
+              -p 6003:6003 \
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:latest
+
+      - name: Deploy get-likes to EC2 (prod)
+        if: env.DEPLOY_ENV == 'prod'
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ env.EC2_HOST }}
@@ -277,23 +349,29 @@ jobs:
     if: needs.changes.outputs.remove_like == 'true'
     steps:
       - uses: actions/checkout@v4
+
       - name: Set environment for deploy (remove-like)
         id: set_env
         run: |
           if [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "main" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=prod" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY_PROD }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_PROD }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=prod" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/test" ]]; then
             echo "SSH_KEY=${{ secrets.EC2_SSH_KEY }}" >> $GITHUB_ENV
             echo "EC2_HOST=${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=test" >> $GITHUB_ENV
           else
             echo "No deploy target"
             exit 1
           fi
-      - name: Deploy remove-like to EC2
+
+      - name: Deploy remove-like to EC2 (test)
+        if: env.DEPLOY_ENV == 'test'
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ env.EC2_HOST }}
@@ -321,3 +399,34 @@ jobs:
               --env-file /home/ubuntu/remove-like.env \
               -p 6002:6002 \
               ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:latest
+
+      - name: Deploy remove-like to EC2 (prod)
+        if: env.DEPLOY_ENV == 'prod'
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ env.EC2_HOST }}
+          username: ubuntu
+          key: ${{ env.SSH_KEY }}
+          script: |
+            cat <<EOF > /home/ubuntu/remove-like.env
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+            POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+            REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+            WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            EOF
+
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:latest
+            docker stop remove-like || true && docker rm remove-like || true
+            docker run -d --name remove-like \
+              --env-file /home/ubuntu/remove-like.env \
+              -p 6002:6002 \
+              ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:latest
+
